--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -45,6 +45,7 @@ body {
   font-weight: 400;
   line-height: 1.4;
   color: $black;
+  background-color:  #141517;
 }
 .container {
   padding-left: $grid-gutter-width;
