--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -15,9 +15,9 @@ $container-max-widths: (
 
 $grid-gutter-width: 20px;
 
-$primary: #4c6ef5;
+$primary: #3700b3;
 $secondary: #ffca28;
-$black: #212529;
+$black: #a6a7ab;
 
 // Links
 $link-color: $primary;
