--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -15,7 +15,7 @@ $container-max-widths: (
 
 $grid-gutter-width: 20px;
 
-$primary: #3700b3;
+$primary: #BB86fc;
 $secondary: #ffca28;
 $black: #a6a7ab;
 
