--- a/assets/scss/components/_sub-footer.scss
+++ b/assets/scss/components/_sub-footer.scss
@@ -43,7 +43,7 @@
         }
         &.zerostatic {
           a {
-            color: #333;
+            color: #fffff;
           }
         }
       }
