--- a/assets/scss/components/_sub-footer.scss
+++ b/assets/scss/components/_sub-footer.scss
@@ -19,7 +19,7 @@
       li {
         list-style: none;
         display: block;
-        color: #333;
+        color: #ffffff;
         font-size: 0.9rem;
         line-height: 1.8;
         font-weight: bold;
