--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -15,9 +15,9 @@ $container-max-widths: (
 
 $grid-gutter-width: 20px;
 
-$primary: #BB86fc;
-$secondary: #ffca28;
-$black: #a6a7ab;
+$primary: #03DAC5;
+$secondary: #BB86fc;
+$black: #ffffff;
 
 // Links
 $link-color: $primary;
