--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -17,7 +17,7 @@ $grid-gutter-width: 20px;
 
 $primary: #03DAC5;
 $secondary: #BB86fc;
-$black: #ffffff;
+$black: #a6a7ab;
 
 // Links
 $link-color: $primary;
