--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -5,7 +5,7 @@
   background: $primary;
   font-weight: normal;
   text-transform: uppercase;
-  color: lighten($primary, 50%);
+  color: #141517;
   text-decoration: none;
   -webkit-transition: all 0.15s ease;
   transition: all 0.15s ease;
