--- a/assets/scss/components/_overview.scss
+++ b/assets/scss/components/_overview.scss
@@ -1,5 +1,5 @@
 .overview {
-  background: lightgoldenrodyellow;
+  background: $primary;
   border-radius: 3px;
   padding: 4px 10px 4px 10px;
   float: right;
