--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -15,9 +15,9 @@ $container-max-widths: (
 
 $grid-gutter-width: 20px;
 
-$primary: #03DAC5;
+$primary: #CED9B8;
 $secondary: #BB86fc;
-$black: #a6a7ab;
+$black: #D8D9D7;
 
 // Links
 $link-color: $primary;
