--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -16,8 +16,8 @@ $container-max-widths: (
 $grid-gutter-width: 20px;
 
 $primary: #CED9B8;
-$secondary: #BB86fc;
-$black: #D8D9D7;
+$secondary: #9BBF9D;
+$black: #0D0D0D;
 
 // Links
 $link-color: $primary;
