--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -15,7 +15,7 @@ $container-max-widths: (
 
 $grid-gutter-width: 20px;
 
-$primary: #CED9B8;
+$primary: #9BBF9D;
 $secondary: #9BBF9D;
 $black: #0D0D0D;
 
