--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -15,9 +15,9 @@ $container-max-widths: (
 
 $grid-gutter-width: 20px;
 
-$primary: #9BBF9D;
-$secondary: #9BBF9D;
-$black: #0D0D0D;
+$primary: #345956;
+$secondary: #735236;
+$black: #011126;
 
 // Links
 $link-color: $primary;
