--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -5,7 +5,7 @@
   background: $primary;
   font-weight: normal;
   text-transform: uppercase;
-  color: #A68A56;
+  color: #d9d4d0;
   text-decoration: none;
   -webkit-transition: all 0.15s ease;
   transition: all 0.15s ease;
