--- a/assets/scss/bootstrap/_tables.scss
+++ b/assets/scss/bootstrap/_tables.scss
@@ -5,7 +5,7 @@
 .table {
   width: 100%;
   margin-bottom: $spacer;
-  color: #A6A7AB;
+  color: $black;
   background-color: $table-bg; // Reset for nesting within parents with `background-color`.
 
   th,
