--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -17,7 +17,7 @@ $grid-gutter-width: 20px;
 
 $primary: #345956;
 $secondary: #735236;
-$black: #010B40;
+$black: #3D3F40;
 
 // Links
 $link-color: $primary;
